# wildlifescanner

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  architecture.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.windsurf/rules/: python-ai-developer.md
input/: .env
tests/: conftest.py  test_aspect_and_postprocess.py  test_cli.py  test_cli_ab.py  test_config.py  test_config_ab.py  test_config_coercion.py  test_config_more.py  test_detectors_base_and_factory.py  test_detectors_yolo.py  test_factory.py  test_logging_setup.py  test_main_ab.py  test_main_and_entry.py  test_main_and_logging.py  test_megadetector_unit.py  test_models.py  test_pipeline_analyze.py  test_pipeline_postprocess.py  test_pipeline_utils.py  test_processing_utils.py  test_processing_video_extra.py  test_processing_video_probe_and_cut.py  test_segmenter.py  test_video_sets.py  test_watcher.py  test_watcher_utils.py
wildlifescanner/: cli.py  config.py  logging_setup.py  main.py  models.py  pipeline.py  segmenter.py  watcher.py
wildlifescanner/detectors/: __init__.py  base.py  factory.py  megadetector.py  yolo.py
wildlifescanner/processing/: video.py
wildlifescanner/tracking/: base.py
